Revises computation dependency handling